# CT2

./: .gitignore  DEBUG_LOGGING_GUIDE.md
backend/: CMakeLists.txt  backend.cpp  backend.h  camera.h  main.cpp  normalcamera.cpp  normalcamera.h  rtspcamera.cpp  rtspcamera.h
frontend/: .tar.xz  CROSSHAIR_FEATURE_DOCUMENTATION.md  HISTOGRAM_IMPLEMENTATION.md  WINDOW_LEVEL_USAGE.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: i18n.js  index.css  main.jsx  routes.jsx
frontend/src/components/: AcquisitionSettings.jsx  AdvancedFiltering.jsx  CabinCameraDisplay.jsx  DetectorConfiguration.jsx  EnhancedCalibrationSystem.jsx  EnhancedHistogramDisplay.jsx  EnhancedIntensityProfileDisplay.jsx  FilterToolbar.jsx  GeometryConfiguration.jsx  HistogramDisplay.jsx  ImageComparisonViewer.jsx  ImageProcessingPanel.jsx  ImageQualityAssessment.jsx  ImageReel.jsx  IntensityProfileDisplay.jsx  JoystickSpeedControl.jsx  Layout.jsx  LinearDetectorImaging.jsx  ManipulatorControl.jsx  PositionFeedback.jsx  RealTimeImageProcessor.jsx  RealtimeMonitoringDashboard.jsx  ScanProtocolManagement.jsx  SystemStabilityCheck.jsx  TabNav.jsx  Toolbar.jsx  TrajectoryDefinition.jsx  XrayExposureLog.jsx
frontend/src/contexts/: CameraContext.jsx  FormDataContext.jsx  HistogramContext.jsx  ImageProcessingContext.jsx  IntensityProfileContext.jsx  LayerContext.jsx  ThemeContext.jsx  WebChannelContext.jsx  WebSocketContext.jsx  XrayContext.jsx
frontend/src/hooks/: useFormPage.js  useToolLayer.js  useWindowLevel.js
frontend/src/pages/: CanvasTest.jsx  Home.jsx  InitialParameters.jsx  (+5 more)
(+56 files in other folders)
